tests/fixtures/invalid/pow_dict_int_float.py
# Cannot call pow() with Dict[str, int], Int, Float
x = pow({"a": 1}, 1, 1.0)
